# inja

./: Cargo.toml
dll_example/: msgbox.cpp
inja/: Cargo.toml
inja/src/: main.rs
injectant/: Cargo.toml
injectant/src/: lib.rs
src/: executor.rs  injector.rs  main.rs  remote_allocator.rs  remote_process.rs  remote_thread.rs  utils.rs
src/executor/: create_remote_thread.rs  fake_veh.rs  kernel_callback_table.rs  manual_mapping.rs  mod.rs  nt_create_thread_ex.rs  queue_user_apc.rs  set_windows_hook_ex.rs  thread_hijacking.rs
src/loader/: ldr_load_dll.rs  load_library.rs  mod.rs
src/symbols/: handler.rs  loader.rs  mod.rs
src/wrappers/: memory.rs  mod.rs  module.rs  pe.rs  process.rs  remote_module.rs  remote_process.rs  remote_thread.rs  remote_window.rs  snapshot.rs  structs.rs  thread.rs  window.rs
src/wrappers/process/: local_process.rs  mod.rs  remote_process.rs
