[package]
name = "inja"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "inja"
path = "src/main.rs"

[dependencies]
dynasmrt = {version = "3.2.1"}
dinvk = "0.2.6"
clap = { version = "4.5.41", features = ["derive"] }
windows = {version = "0.61.3", features = ["Win32", "Wdk",
"Win32_Security",
"Win32_System_Kernel",
"Win32_System_LibraryLoader",
"Win32_System_Threading",
"Win32_System_Memory",
"Win32_System_SystemServices",
"Win32_System_Diagnostics_ToolHelp",
"Win32_System_Diagnostics_Debug",
"Win32_UI_WindowsAndMessaging",
"Win32_UI_Input_KeyboardAndMouse",
"Wdk_System_SystemServices"
]}
