[package]
name = "inja"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "inja"
path = "src/main.rs"

[dependencies]
dynasmrt = {version = "4.0"}
clap = { version = "4.5", features = ["derive"] }
windows = {version = "0.62", features = ["Win32", "Wdk",
"Win32_Security",
"Win32_System_Kernel",
"Win32_System_LibraryLoader",
"Win32_System_Threading",
"Win32_System_Memory",
"Win32_System_SystemServices",
"Win32_System_Diagnostics_ToolHelp",
"Win32_System_Diagnostics_Debug",
"Win32_System_DataExchange",
"Win32_UI_WindowsAndMessaging",
"Win32_UI_Input_KeyboardAndMouse",
"Wdk_Foundation",
"Wdk_System_Threading",
"Wdk_System_SystemServices"
]}
